# GtkSharp

./: .ci_build.sh  .cvsignore  .gitignore  .travis.yml  AUTHORS  AssemblyInfo.cs.in  ChangeLog  ChangeLog.old  Dockerfile  GENERATOR.md  HACKING  LICENSE  Makefile.am  Makefile.in  Makefile.include  NEWS  NOTES  README  README.generator  README.md  TODO  autogen.sh  azure-pipelines.yml  bootstrap  bootstrap-2.10  bootstrap-2.12  bootstrap-2.14  bootstrap-2.4  bootstrap-2.6  bootstrap-2.8  bootstrap-for-the-insane  bootstrap-generic  build.cake  build.ps1  build.sh  cake.config  configure.ac  configure.in  configure.in.in  dbuild.sh  (+18 more)
Source/: Directory.Build.props  GtkSharp.sln  GtkSharp.snk  autogen.sh  configure.ac  meson.build  policy.config.in
art/: .cvsignore  Art.metadata  Makefile.am  Makefile.in  art-api.raw  art-api.xml  art-sharp-2.0.pc.in  art-sharp.dll.config.in  art-sharp.pc.in  art-symbols.xml
atk/: .cvsignore  Atk.metadata  Global.cs  Global.custom  Hyperlink.cs  Hyperlink.custom  Makefile.am  Makefile.in  Misc.custom  Object.cs  Object.custom  ObjectFactory.custom  SelectionAdapter.cs  SelectionAdapter.custom  TextAdapter.cs  TextAdapter.custom  Util.cs  Util.custom  atk-api-2.10.raw  atk-api-2.12.raw  atk-api-2.14.raw  atk-api-2.4.raw  atk-api.raw  atk-api.xml  atk-sharp.dll.config.in  atk.csproj  makefile  makefile.win32  meson.build
cairo/: AssemblyInfo.cs  AssemblyInfo.cs.in  Cairo.cs  Context.cs  Device.cs  FontFace.cs  FontOptions.cs  ImageSurface.cs  LinearGradient.cs  Makefile.am  NativeMethods.cs  Path.cs  Pattern.cs  Region.cs  ScaledFont.cs  SolidPattern.cs  Surface.cs  SurfacePattern.cs  XlibSurface.cs  cairo-api.xml  cairo.csproj  meson.build  policy.1.0.config
doc/: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  TODO  add-since.cs  all.xml  atk-sharp-docs.xml  gdk-sharp-docs.xml  gen-finalize-docs.cs  gen-gtype-ctor-docs.cs  gen-gtype-docs.cs  gen-handlerargs-docs.cs  gen-intptr-ctor-docs.cs  gen-vm-docs.cs  glib-sharp-docs.xml  gtk-sharp-docs.source  gtk-sharp-docs.xml  index.html  introspect.cs  makefile  makefile.common  makefile.win32  netdoc.xsl  netdoc_pp.pl  pango-sharp-docs.xml  scan-deprecations.cs
gapi/: AssemblyInfo.cs  GTypeExtensions.cs  Makefile.am  gapi-2.0-compat.dll.config  gapi-2.0-compat.pc.in
gda/: .cvsignore  Application.cs  Gda.metadata  Makefile.am  Makefile.in  XmlConnection.custom  gda-api.raw  gda-api.xml  gda-sharp-2.0.pc.in  gda-sharp.dll.config.in  gda-sharp.pc.in
gdk/: .cvsignore  Atom.custom  Color.cs  Color.custom  Colormap.custom  Device.cs  Device.custom  DeviceAxis.custom  Display.cs  Display.custom  DisplayManager.cs  DisplayManager.custom  DragContext.custom  Drawable.custom  EdgeTable.custom  Event.cs  EventAny.custom  EventButton.cs  EventButton.custom  EventClient.cs  EventClient.custom  EventConfigure.cs  EventConfigure.custom  EventCrossing.cs  EventCrossing.custom  EventDND.cs  EventDND.custom  EventExpose.cs  EventExpose.custom  EventFocus.cs  EventFocus.custom  EventGrabBroken.cs  EventKey.cs  EventKey.custom  EventMotion.cs  EventMotion.custom  EventNoExpose.custom  EventOwnerChange.cs  EventProperty.cs  EventProperty.custom  (+71 more)
generator/: .cvsignore  .gitignore  AliasGen.cs  ArrayParameter.cs  BoxedGen.cs  ByRefGen.cs  CallbackGen.cs  ChildProperty.cs  ClassBase.cs  ClassField.cs  ClassGen.cs  CodeGenerator.cs  ConstFilenameGen.cs  ConstStringGen.cs  Constant.cs  Ctor.cs  CustomMarshalerGen.cs  DESIGN  EnumGen.cs  Field.cs  FieldBase.cs  GObjectGen.cs  GObjectVM.cs  GStringGen.cs  GUnicharGen.cs  GenBase.cs  GenerationInfo.cs  HandleBase.cs  IGeneratable.cs  IManualMarshaler.cs  IOwnable.cs  ImportSignature.cs  InterfaceGen.cs  InterfaceVM.cs  LPGen.cs  LPUGen.cs  LogWriter.cs  Makefile.am  Makefile.in  ManagedCallString.cs  (+44 more)
gio/: AppInfoAdapter.cs  AppInfoAdapter.custom  AppInfoFactory.cs  Application.cs  DBusInterfaceVTable.cs  File.cs  File.custom  FileAdapter.cs  FileAdapter.custom  FileEnumerator.cs  FileEnumerator.custom  FileFactory.cs  Gio.metadata  GioStream.cs  IFile.cs  Makefile.am  gio-api.raw  gio-sharp-2.0.pc.in  gio-sharp-3.0.pc.in  gio-sharp.dll.config.in  gio.csproj  meson.build
glade/: .cvsignore  Glade.metadata  GladeWidgetAttribute.cs  Global.custom  HandlerNotFoundExeception.cs  Interface.custom  Makefile.am  Makefile.in  WidgetAttribute.cs  XML.custom  glade-api-2.14.raw  glade-api.raw  glade-api.xml  glade-sharp-2.0.pc.in  glade-sharp-3.0.pc.in  glade-sharp.dll.config.in  glade-sharp.pc.in  makefile.win32
glib/: .cvsignore  Argv.cs  Boxed.cs  Bytes.cs  CDeclCallbackAttribute.cs  ClassInitializerAttribute.cs  Cond.cs  ConnectBeforeAttribute.cs  Date.cs  DateTime.cs  DefaultSignalHandlerAttribute.cs  DelegateWrapper.cs  DestroyNotify.cs  EnumWrapper.cs  ExceptionManager.cs  FileUtils.cs  Format.cs  GCallback.cs  GException.cs  GInterfaceAdapter.cs  GLibSharp.SourceDummyMarshalNative.cs  GLibSharp.voidObjectIntPtrSignal.cs  GString.cs  GType.cs  Global.cs  IOChannel.cs  IWrapper.cs  Idle.cs  InitiallyUnowned.cs  KeyFile.cs  List.cs  ListBase.cs  Log.cs  MainContext.cs  MainLoop.cs  Makefile.am  Makefile.in  ManagedValue.cs  Markup.cs  Marshaller.cs  (+47 more)
glue/: .cvsignore  Makefile.am  adjustment.c  canvas-proxy-marshal.c  canvas-proxy-marshal.h  canvas-proxy-marshal.list  canvas-proxy.c  canvas-proxy.h  canvaspoints.c  clipboard.c  colorseldialog.c  combo.c  dialog.c  dragcontext.c  error.c  event.c  fileselection.c  layout.c  list.c  makefile.win32  nodestore.c  object.c  paned.c  program.c  selection.c  selectiondata.c  slist.c  style.c  textiter.c  thread-notify.c  time_t.c  type.c  value.c  widget.c  win32dll.c
gnome/: .cvsignore  About.custom  App.custom  AssemblyInfo.cs.in  BonoboUIVerb.cs  Canvas.custom  CanvasBpath.custom  CanvasClipgroup.custom  CanvasEllipse.custom  CanvasGroup.custom  CanvasItem.custom  CanvasLine.custom  CanvasPathDef.custom  CanvasPixbuf.custom  CanvasPoints.custom  CanvasPolygon.custom  CanvasProxy.cs  CanvasRE.custom  CanvasRect.custom  CanvasRichText.custom  CanvasShape.custom  CanvasText.custom  CanvasWidget.custom  Client.custom  (+42 more)
(+6439 files in other folders)
